--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -183,7 +183,7 @@
     <!--  Whether Multiuser UI should be shown -->
     <bool name="config_enableMultiUserUI">true</bool>
 
-    <bool name="config_powerDecoupleInteractiveModeFromDisplay">true</bool>
+    <!-- bool name="config_powerDecoupleInteractiveModeFromDisplay">true</bool -->
 
     <bool name="config_suspendWhenScreenOffDueToProximity">true</bool>
 
@@ -312,8 +312,8 @@
         <item>com.android.location.fused</item>
     </string-array>
 
-    <!-- Configuration to support SIM contact batch operation -->
-    <bool name="config_sim_phonebook_batch_operation">false</bool>
+    <!-- Configuration to support SIM contact batch operation 
+    <bool name="config_sim_phonebook_batch_operation">false</bool> -->
 
     <!-- Indicates whether round icons should be parsed from the application manifest. -->
     <bool name="config_useRoundIcon">true</bool>
